--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -11,13 +11,13 @@
     <input type="text" class="form-control" id="customer_name" name="customer_name" required><br>
   
     <label for="mango">Mango:</label>
-    <input type="number" class="form-control" id="mango" name="mango" min="0" value="0"><br>
+    <input type="number" class="form-control" id="mango" name="mango" min="0" ><br>
   
     <label for="orange">Orange:</label>
-    <input type="number" class="form-control" id="orange" name="orange" min="0" value="0"><br>
+    <input type="number" class="form-control" id="orange" name="orange" min="0" ><br>
   
     <label for="banana">Banana:</label>
-    <input type="number" class="form-control" id="banana" name="banana" min="0" value="0"><br>
+    <input type="number" class="form-control" id="banana" name="banana" min="0" ><br>
   
     <input type="submit"  class="btn btn-primary" value="Submit Order">
    <!--<div>
@@ -28,6 +28,9 @@
       </ul>
     </div>--> 
   </form>
+
+  <a class="btn btn-danger" id="delete_user" href="/delete_user">Delete My Account</a>
+
 
 
 
